# payment_system_with_stripe

./: .env.sample  .flake8  .gitignore  README.md  docker-compose.yaml  middleware.py  nginx.conf  pyproject.toml
config/: settings.py  urls.py
items/: admin.py  apps.py  choices.py  models.py  stripe_services.py  urls.py  views.py
items/fixtures/: items.json
items/management/commands/: csu.py
items/migrations/: 0001_initial.py
items/templates/items/: base.html  index.html  index_item.html  success_pay.html
orders/: admin.py  forms.py  models.py  signals.py  urls.py  validators.py  views.py
orders/fixtures/: orders.json
orders/migrations/: 0001_initial.py
orders/templates/orders/: index_order.html
services/: stripe_services.py
